# mcp_experiments

./: LICENSE.md  README.md  pyproject.toml
emh/: client.py  pyproject.toml  server.py
go/: client.go  server.go
go/docs/: client.txt  server.txt
go_mcp/: client.go  server.go
go_mcp/docs/: client.txt  server.txt
python/emh/: chapter_client.py  chapter_server.py
python/kafka/: README.md  kafka_consumer.py  kafka_producer.py
python/mcp/: .kafka_mcp_server.py.swp  client.py  finance_server.py  greeting_server.py  kafka_mcp_server.py  math_server.py  sentiment_analysis_server.py  server.py
python/mcp/docs/: kafka_mcp_server.txt
python/mcp/scratch/: sentiment.py
